# School_21_Core_C

C2_s21_stringplus-2/: README.md
C2_s21_stringplus-2/materials/: instructions_for_testing.md
C2_s21_stringplus-2/src/: Makefile  s21_string.c  s21_string.h  s21_string_test.c  unit_test.c
C3_SimpleBashUtils-0/: CMakeLists.txt
C3_SimpleBashUtils-0/src/cat/: s21_cat  s21_cat.c  s21_cat.h
C3_SimpleBashUtils-0/src/grep/: s21_grep  s21_grep.c
C4_s21_math-0/: README.md  README_RUS.md
C4_s21_math-0/materials/: instructions_for_testing_rus.md
C4_s21_math-0/src/: Makefile  s21_math.c  s21_math.h  s21_test.c
C5_s21_decimal-2/src/: Makefile  s21_arithmetics.c  s21_buffer_decimal_service.c  s21_compare.c  s21_decimal.c  s21_decimal.h  s21_other.c  s21_print_service.c  s21_service.c  unit_tests.c
C6_s21_matrix-0/src/: Makefile  s21_matrix.c  s21_matrix.h  unit_tests.c
C7_SmartCalc_v1.0-0 (gtk undone)/src/: Makefile  calc  s21_parser.c  s21_smart_calc.c  s21_smart_calc.h  s21_stack.c
C7_SmartCalc_v1.0-0/src/: Makefile  readme.html  s21_credit_calc.c  s21_parser.c  s21_smart_calc.c  s21_smart_calc.h  s21_stack.c  unit_tests.c
C7_SmartCalc_v1.0-0/src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
C8_3DViewer_v1.0-1/src/: Makefile  readme.html
C8_3DViewer_v1.0-1/src/C/: s21_3Dviewer.h  s21_affine_transformations.c  s21_list.c  s21_obj_parser.c  s21_unit_tests.c
C8_3DViewer_v1.0-1/src/CPP/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
C8_3DViewer_v1.0-1/src/CPP/QtGifImage/src/gifimage/: qgifimage.cpp
